--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "zustand": "^5.0.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
@@ -59,11 +60,12 @@
   "devDependencies": {
     "@storybook/addon-docs": "^9.0.13",
     "@storybook/preset-create-react-app": "^9.0.13",
-    "@storybook/react-webpack5": "^9.0.13",
+    "@storybook/react-vite": "^9.0.14",
     "@types/bun": "^1.2.17",
+    "@vitejs/plugin-react": "^4.6.0",
     "eslint-plugin-storybook": "^9.0.13",
     "prop-types": "^15.8.1",
     "storybook": "^9.0.13",
-    "webpack": "^5.99.9"
+    "vite": "^7.0.0"
   }
 }
