--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@chakra-ui/react": "^3.21.0",
     "@emotion/react": "^11.14.0",
-    "@storybook/addon-themes": "^9.0.13",
-    "@storybook/react": "^9.0.13",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -36,14 +34,11 @@
     "preview": "vite preview",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "plugin:storybook/recommended"
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -59,14 +54,9 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-docs": "^9.0.13",
-    "@storybook/preset-create-react-app": "^9.0.13",
-    "@storybook/react-vite": "^9.0.14",
     "@types/bun": "^1.2.17",
     "@vitejs/plugin-react": "^4.6.0",
-    "eslint-plugin-storybook": "^9.0.13",
     "prop-types": "^15.8.1",
-    "storybook": "^9.0.13",
     "vite": "^7.0.0"
   }
 }
